--- a/css/style.css
+++ b/css/style.css
@@ -291,6 +291,70 @@ img {
     color: #ffeeeeee;
 }
 
+/* Modal carrito */
+
+.carritoModal {
+    width: 50%;
+    max-height: 75vh;
+    background-color: #ffddcc;
+    color: #331122;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    overflow: auto;
+    top: 10vh;
+    right: 4rem;
+    border: 1px solid #DD8755;
+}
+
+.carritoModal h2 {
+    font-size: 2.3rem;
+}
+.carritoModal p {
+    font-size: 2.1rem;
+}
+
+
+.carritoModal::-webkit-scrollbar {
+    display: none;
+}
+
+.carritoHeader {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 1rem;
+    height: 5rem;
+    width: 100%;
+    align-items: center;
+    border-bottom: 1px solid #DD8755;
+}
+.carritoHeader button {
+    border: transparent;
+    background-color: #ffddcc;
+    cursor: pointer;
+    font-size: 2.8rem;
+}
+.carritoLista {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #DD8755;
+    padding: .5rem;
+    background-color: #ffeeeeee;
+}
+.carritoLista img {
+    width: 15%;
+    border-radius: 20px;
+}
+
+.carritoFooter {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    height: 5rem;
+    align-items: center;
+}
 /* Logo wsp */
 .wsp {
     position: fixed;
