--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,10 @@ img {
     height: 80px;
 }
 
+.header__nav i {
+    font-size: 3rem;
+}
+
 .header__nav ul {
     display: flex;
     flex-direction: row;
@@ -324,7 +328,7 @@ img {
     display: flex;
     justify-content: space-between;
     padding: 0 1rem;
-    height: 5rem;
+    min-height: 5rem;
     width: 100%;
     align-items: center;
     border-bottom: 1px solid #DD8755;
@@ -352,8 +356,20 @@ img {
     display: flex;
     justify-content: space-around;
     width: 100%;
-    height: 5rem;
+    min-height: 5rem;
     align-items: center;
+}
+
+.cantidadCarrito {
+    background-color: #f55;
+    color: #ffddcc;
+    border-radius: 50%;
+    font-size: 1.2rem;
+    padding: 4px 8px;
+    top: 18px;
+    right: 24px;
+    position: absolute;
+    display: none;
 }
 /* Logo wsp */
 .wsp {
